# CG_A1

./: .gitignore  CMakeLists.txt  README.md  clean.sh  make.sh
include/: Alien.h  Crate.h  Drawable.h  Factory.h  Floor.h  Material.h  Particle.h  Plane.h  SkyDome.h  Teapot.h  Texture.h  UFO.h  utils.h
resources/textures/: Skydome.hdr
src/: alien.cpp  crate.cpp  drawable.cpp  factory.cpp  floor.cpp  main.cpp  material.cpp  particle.cpp  plane.cpp  skydome.cpp  teapot.cpp  texture.cpp  ufo.cpp  utils.cpp
